// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.

import org.vineflower.build.JasmCompile
import org.vineflower.build.TestDataRuntimesProvider

plugins {
  id 'jacoco'
}

apply plugin: 'jacoco'
apply plugin: 'java-test-fixtures'

allprojects {
  apply plugin: 'java'

  group = 'org.vineflower'

  compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
  }

  java.toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }

  repositories {
    mavenCentral()
  }

  dependencies {
    implementation 'org.jetbrains:annotations:24.0.0'
    testImplementation("org.junit.jupiter:junit-jupiter-api:${project.junit_bom}")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${project.junit_bom}")
  }

  test {
    useJUnitPlatform()

    // `gradlew test --tests root.project.Test` also runs subproject test tasks
    // named `test`. Those subprojects should not fail only because the root
    // test filter does not match any of their classes.
    if (project != rootProject) {
      filter {
        setFailOnNoMatchingTests(false)
      }
    }
  }

  tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
  }
}

group = 'org.vineflower'
base.archivesName = 'sporeflower'

version = '1.12.0'

def ENV = System.getenv()
version = version + (ENV.GITHUB_ACTIONS ? "" : "+local")
version = version + (ENV.STATUS == "snapshot" ? "-SNAPSHOT" : "")

sourceSets {
  main.java.srcDirs 'src'
  test.java.srcDirs 'test'
  testFixtures.java.srcDirs 'testFixtures'
}

repositories { mavenCentral() }

dependencies {
  testImplementation("org.junit.jupiter:junit-jupiter-api:${project.junit_bom}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${project.junit_bom}")
  testImplementation("org.junit.jupiter:junit-jupiter-params:${project.junit_bom}")

  testImplementation("org.hamcrest:hamcrest:${project.hamcrest}")

  testFixturesImplementation("org.junit.jupiter:junit-jupiter-params:${project.junit_bom}")
  testFixturesImplementation("org.hamcrest:hamcrest:${project.hamcrest}")

}


jacocoTestReport.dependsOn(test)

build.dependsOn(jacocoTestReport)

jacocoTestReport {
  reports {
    xml.required = true
  }
}

tasks.withType(JavaCompile) {
  options.deprecation = true
}

task testDataClasses {
  group = 'build'
}
testClasses.dependsOn(testDataClasses)

void createJavaTestDataSet(int version, String suffix = "", List<String> compilerArgs = []) {
  sourceSets.create("testDataJava${version}${suffix}") {
    it.java.srcDirs file("testData/src/java${version}${suffix.toLowerCase()}")
  }
  tasks.getByName("compileTestDataJava${version}${suffix}Java") {
    destinationDirectory = file("testData/classes/java${version}${suffix.toLowerCase()}")
    javaCompiler = javaToolchains.compilerFor {
      languageVersion = JavaLanguageVersion.of(version)
    }

    options.compilerArgs = compilerArgs
  }
  testDataClasses.dependsOn("testDataJava${version}${suffix}Classes")
}

def testJavaRuntimes = [:]

[8].forEach { version ->
    createJavaTestDataSet(version)
    testJavaRuntimes[version] = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(version)
    }
}
[8].forEach { version -> createJavaTestDataSet(version, "NoDebug", ["-g:none"])}

task compileTestDataJasm(type: JasmCompile) {
  source = fileTree("testData/src/jasm/")
  destinationDirectory = file("testData/classes/jasm/")
  options.compilerArgs += ["-g"]
}
task testDataJasmClasses {
  group = 'build'
}
testDataJasmClasses.dependsOn(compileTestDataJasm)
testDataClasses.dependsOn(testDataJasmClasses)

test {
  maxHeapSize = "512M"

  systemProperty "DOT_EXPORT_DIR", System.getProperty("DOT_EXPORT_DIR", null)
  systemProperty "DOT_ERROR_EXPORT_DIR", System.getProperty("DOT_ERROR_EXPORT_DIR", null)
  systemProperty "VALIDATE_DECOMPILED_CODE", System.getProperty("VALIDATE_DECOMPILED_CODE", "false")
  
  def provider = objects.newInstance(TestDataRuntimesProvider)
  testJavaRuntimes.each { k, v ->
      provider.launchers.put(k, v)
  }
  jvmArgumentProviders << provider

  // Always run tests
  outputs.upToDateWhen { false }
}

jar {
  from sourceSets.main.output

  manifest {
    attributes (
      'Main-Class': 'org.jetbrains.java.decompiler.main.decompiler.ConsoleDecompiler',
      'Implementation-Name': "Sporeflower",
      'Implementation-Version': project.version
    )
  }

  subprojects.each {
    Task buildTask = it.tasks.named("true".equals(it.does_shadow) ? 'shadowJar' : 'jar').get()
    dependsOn buildTask
    from(buildTask.outputs) {
      into 'META-INF/plugins/'
    }
  }
}

// If testFixtures can't be inferred from the build path, it'll need to be manually specified to be able to find
// the test fixtures class. Put it in a unique place to mark it as such.
testFixturesJar {
  destinationDirectory = file("$rootDir/build/extralibs")
}

tasks.withType(Javadoc).configureEach {
  failOnError = false
  include 'org/jetbrains/java/decompiler/api/**'
  include 'org/jetbrains/java/decompiler/main/extern/**'
  options.addStringOption('Xdoclint:none', '-quiet')
  options.addStringOption('encoding', 'UTF-8')
  options.addStringOption('charSet', 'UTF-8')
}

java {
  withSourcesJar()
  withJavadocJar()
}

tasks.withType(Jar).configureEach {
  reproducibleFileOrder = true
  preserveFileTimestamps = false
}

subprojects {
  Jar buildTask = it.tasks.named("true".equals(it.does_shadow) ? 'shadowJar' : 'jar').get() as Jar
  buildTask.configure {
    entryCompression = ZipEntryCompression.STORED
  }
}
